feat: revamp database schema with new entities and relationships (wip)