@@ -4,8 +4,8 @@ import lombok.Getter;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
-import ovh.excale.vgreeter.models.TrackModel;
-import ovh.excale.vgreeter.repositories.TrackRepository;
+import ovh.excale.vgreeter.entity.TrackEntity;
+import ovh.excale.vgreeter.repository.TrackRepository;
 
 @Service
 public class TrackService {
@@ -20,16 +20,16 @@ public class TrackService {
 	}
 
 	// TODO: nullsafe
-	public TrackModel randomTrack() {
+	public TrackEntity randomTrack() {
 
 		long qty = trackRepo.count();
 		int idx = (int) (Math.random() * qty);
 
-		Page<TrackModel> trackPage = trackRepo.findAll(PageRequest.of(idx, 1));
-		TrackModel track = null;
+		Page<TrackEntity> trackPage = trackRepo.findAll(PageRequest.of(idx, 1));
+		TrackEntity track = null;
 		if(trackPage.hasContent())
 			track = trackPage.getContent()
-					.get(0);
+					.getFirst();
 
 		return track;
 	}
